--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
+  <div id="map"></div>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.20/topojson.min.js"></script>
   <script src="map.js"></script>
-
 </body>
 
 </html>
