--- a/index.html
+++ b/index.html
@@ -6,15 +6,67 @@
     body {
       font-family: "Helvetica Neue", sans-serif;
       margin: 0;
+      background-color: #fff1f1;
+    }
+
+    div.tooltip {
+      position: absolute;
+      padding: 5px 10px;
+      color: black;
+      border-radius: 4px;
+      font: 12px sans-serif;
+      background: white;
+      border: 1px solid black;
+      pointer-events: none;
+      width: 200px;
+    }
+
+    .tipps {
+      background-color: #e3eef1;
+      border-radius: 1rem;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+      padding: 2rem;
+      color: black;
+      font-family: GrotekMed;
+      -webkit-box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15);
+    }
+
+    table {
+      width: 100%;
+      border: 1px dashed #333333;
+    }
+
+    thead {
+      background-color: #0213ff;
+      color: white;
+    }
+
+    th,
+    td {
+      vertical-align: center;
+      text-align: center;
+      padding: 5px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      font-size: 16px;
+    }
+
+    td {
+      font-size: 16px;
     }
   </style>
 </head>
 
 <body>
   <div id="map"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
+    integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.20/topojson.min.js"></script>
-  <script src="map.js"></script>
+  <script src="src.js"></script>
 </body>
 
 </html>
