--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <tbody id="india-total-data"></tbody>
     </table>
   </div>
+  <div id="updated-at"></div>
   <div id="map"></div>
   <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
   <div id="india-statewise-cases">
@@ -38,9 +39,14 @@
       <tbody id="india-states-cases"></tbody>
     </table>
   </div>
+  <footer style="text-align: center; margin-bottom: 10px;">
+    Made with ❤️ by Binu Kumar &copy; <a href="https://binu42.netlify.com">BKSI</a>
+  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
     integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
+    integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.20/topojson.min.js"></script>
   <script src="src.js"></script>
 </body>
