--- a/index.html
+++ b/index.html
@@ -3,45 +3,48 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>covid-19 india</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div id="india-cases">
-    <table>
-      <thead>
-        <tr>
-          <th>Total Cases</th>
-          <th>Total Active Cases</th>
-          <th>Recovered</th>
-          <th>Deaths</th>
-        </tr>
-      </thead>
-      <tbody id="india-total-data"></tbody>
-    </table>
+  <div class="container">
+    <div id="india-cases">
+      <table class="table table-responsive">
+        <thead>
+          <tr>
+            <th>Total Cases</th>
+            <th>Total Active Cases</th>
+            <th>Recovered</th>
+            <th>Deaths</th>
+          </tr>
+        </thead>
+        <tbody id="india-total-data"></tbody>
+      </table>
+    </div>
+    <div id="updated-at"></div>
+    <div id="map"></div>
+    <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
+    <div id="india-statewise-cases" style="overflow-x:scroll;">
+      <table class="table table-responsive">
+        <thead>
+          <tr>
+            <th>State</th>
+            <th>Total</th>
+            <th>Active</th>
+            <th>Recovered</th>
+            <th>Death</th>
+          </tr>
+        </thead>
+        <tbody id="india-states-cases"></tbody>
+      </table>
+    </div>
+    <footer style="text-align: center; margin-bottom: 10px;">
+      Made with ❤️ by Binu Kumar &copy; <a href="https://binu42.netlify.com">BKSI</a>
+    </footer>
   </div>
-  <div id="updated-at"></div>
-  <div id="map"></div>
-  <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
-  <div id="india-statewise-cases">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>State</th>
-          <th>Total</th>
-          <th>Active</th>
-          <th>Recovered</th>
-          <th>Death</th>
-        </tr>
-      </thead>
-      <tbody id="india-states-cases"></tbody>
-    </table>
-  </div>
-  <footer style="text-align: center; margin-bottom: 10px;">
-    Made with ❤️ by Binu Kumar &copy; <a href="https://binu42.netlify.com">BKSI</a>
-  </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
     integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
