--- a/index.html
+++ b/index.html
@@ -9,40 +9,48 @@
 </head>
 
 <body>
-  <div class="container">
-    <div id="india-cases">
-      <table class="table table-responsive">
-        <thead>
-          <tr>
-            <th>Total Cases</th>
-            <th>Total Active Cases</th>
-            <th>Recovered</th>
-            <th>Deaths</th>
-          </tr>
-        </thead>
-        <tbody id="india-total-data"></tbody>
-      </table>
+  <div class="preloader">
+    <div class="status">
+      <div class="loader">Loading...</div>
     </div>
-    <div id="updated-at"></div>
-    <div id="map"></div>
-    <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
-    <div id="india-statewise-cases" style="overflow-x:scroll;">
-      <table class="table table-responsive">
-        <thead>
-          <tr>
-            <th>State</th>
-            <th>Total</th>
-            <th>Active</th>
-            <th>Recovered</th>
-            <th>Death</th>
-          </tr>
-        </thead>
-        <tbody id="india-states-cases"></tbody>
-      </table>
+  </div>
+  <div id="page" style="display: none;">
+    <h1 style="text-align: center;">Covid-19 Situation in India.</h1>
+    <div class="container">
+      <div id="india-cases">
+        <table class="table table-responsive">
+          <thead>
+            <tr>
+              <th>Total Cases</th>
+              <th>Total Active Cases</th>
+              <th>Recovered</th>
+              <th>Deaths</th>
+            </tr>
+          </thead>
+          <tbody id="india-total-data"></tbody>
+        </table>
+      </div>
+      <div id="updated-at"></div>
+      <div id="map"></div>
+      <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
+      <div id="india-statewise-cases" style="overflow-x:scroll;">
+        <table class="table table-responsive">
+          <thead>
+            <tr>
+              <th>State</th>
+              <th>Total</th>
+              <th>Active</th>
+              <th>Recovered</th>
+              <th>Death</th>
+            </tr>
+          </thead>
+          <tbody id="india-states-cases"></tbody>
+        </table>
+      </div>
+      <footer style="text-align: center; margin-bottom: 10px;">
+        Made with ❤️ by Binu Kumar &copy; <a href="https://binu42.netlify.com">BKSI</a>
+      </footer>
     </div>
-    <footer style="text-align: center; margin-bottom: 10px;">
-      Made with ❤️ by Binu Kumar &copy; <a href="https://binu42.netlify.com">BKSI</a>
-    </footer>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
