added statewise graph

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no">
   <title>covid-19 india</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -32,6 +32,7 @@
       </div>
       <div id="updated-at"></div>
       <div id="map"></div>
+      <div id="chartContainer" style="height: 500px; width: 100%;"></div>
       <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
       <div id="india-statewise-cases" style="overflow-x:scroll;">
         <table class="table table-responsive">
@@ -56,6 +57,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
     integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
     integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.20/topojson.min.js"></script>
