added daily wise graph

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <div id="updated-at"></div>
       <div id="map"></div>
       <div id="chartContainer" style="height: 500px; width: 100%;"></div>
+      <div id="chartContainer1" style="height: 500px; width: 100%;"></div>
       <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
       <div id="india-statewise-cases" style="overflow-x:scroll;">
         <table class="table table-responsive">
