--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
       </div>
       <div id="updated-at"></div>
       <div id="map"></div>
-      <div id="chartContainer" style="height: 500px; width: 100%;"></div>
-      <div id="chartContainer1" style="height: 500px; width: 100%;"></div>
+      <div id="chartContainer" style="height: 600px; width: 100%; margin-top: 30px;"></div>
+      <div id="chartContainer3" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+      <div id="chartContainer1" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+      <div id="chartContainer2" style="height: 600px; width: 100%; margin-top: 25px;"></div>
       <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
       <div id="india-statewise-cases" style="overflow-x:scroll;">
         <table class="table table-responsive">
