added today report

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
       </div>
       <div id="updated-at"></div>
       <div id="map"></div>
+      <div id="india-cases">
+        <table class="table table-responsive">
+          <thead>
+            <tr>
+              <th>Today Cases</th>
+              <th>Today Recovered</th>
+              <th>Today Deaths</th>
+            </tr>
+          </thead>
+          <tbody id="india-today-data"></tbody>
+        </table>
+      </div>
       <div id="chartContainer" style="height: 600px; width: 100%; margin-top: 30px;"></div>
       <div id="chartContainer3" style="height: 600px; width: 100%; margin-top: 25px;"></div>
       <div id="chartContainer1" style="height: 600px; width: 100%; margin-top: 25px;"></div>
