--- a/index.html
+++ b/index.html
@@ -44,28 +44,30 @@
           <tbody id="india-today-data"></tbody>
         </table>
       </div>
-      <div id="chartContainer" style="height: 600px; width: 100%; margin-top: 30px;"></div>
-      <div id="chartContainer3" style="height: 600px; width: 100%; margin-top: 25px;"></div>
-      <div id="chartContainer1" style="height: 600px; width: 100%; margin-top: 25px;"></div>
-      <div id="chartContainer2" style="height: 600px; width: 100%; margin-top: 25px;"></div>
-      <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
-      <div id="india-statewise-cases" style="overflow-x:scroll;">
-        <table class="table table-responsive">
-          <thead>
-            <tr>
-              <th>State</th>
-              <th>Total</th>
-              <th>Active</th>
-              <th>Recovered</th>
-              <th>Death</th>
-            </tr>
-          </thead>
-          <tbody id="india-states-cases"></tbody>
-        </table>
+      <div class="bg">
+        <div id="chartContainer" style="height: 600px; width: 100%; margin-top: 30px;"></div>
+        <div id="chartContainer3" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+        <div id="chartContainer1" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+        <div id="chartContainer2" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+        <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
+        <div id="india-statewise-cases" style="overflow-x:scroll;">
+          <table class="table table-responsive">
+            <thead>
+              <tr>
+                <th>State</th>
+                <th>Total</th>
+                <th>Active</th>
+                <th>Recovered</th>
+                <th>Death</th>
+              </tr>
+            </thead>
+            <tbody id="india-states-cases"></tbody>
+          </table>
+        </div>
+        <footer style="text-align: center; padding-bottom: 20px; color: #fff;">
+          Made with ❤️ by <a href="https://binu42.netlify.com">Binu Kumar</a> &copy; BKSI
+        </footer>
       </div>
-      <footer style="text-align: center; margin-bottom: 10px;">
-        Made with ❤️ by Binu Kumar &copy; <a href="https://binu42.netlify.com">BKSI</a>
-      </footer>
     </div>
   </div>
 
