added barplot and removed legend of pie chart

--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
       <div class="bg">
         <div id="chartContainer" style="height: 600px; width: 100%; margin-top: 30px;"></div>
         <div id="chartContainer3" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+        <div id="chartContainer5" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+        <div id="chartContainer6" style="height: 600px; width: 100%; margin-top: 25px;"></div>
         <div id="chartContainer1" style="height: 600px; width: 100%; margin-top: 25px;"></div>
         <div id="chartContainer2" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+        <div id="chartContainer4" style="height: 600px; width: 100%; margin-top: 25px;"></div>
+        <div id="chartContainer7" style="height: 100vh; width: 100%; margin-top: 25px;"></div>
         <h1 style="text-align: center; text-decoration: underline;">Statewise Cases in India</h1>
         <div id="india-statewise-cases" style="overflow-x:scroll;">
           <table class="table table-responsive">
