--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div id="updated-at"></div>
       <div id="map"></div>
-      <div id="india-cases">
+      <div id="india-today-cases">
         <table class="table table-responsive">
           <thead>
             <tr>
